# Pandora-Genesis-SDK

./: CHANGELOG_PR1.md  CHANGELOG_PR2_PR3.md  Cargo.toml  FINAL_SUMMARY.md  LEARNING_QUICKSTART.md  README.md  SKANDHA_FAIR_TEST_DESIGN.md  SKANDHA_INVESTIGATION_FINAL_REPORT.md  SKANDHA_PARAMETER_TUNING_REPORT.md  SKANDHA_PIPELINE_ANALYSIS.md
crates/zenb-core/: ARCHITECTURE.md  Cargo.toml  TRIKAYA_ANALYSIS.md
crates/zenb-core/benches/: forensic_bench.rs
crates/zenb-core/examples/: b1_v3_demonstration.rs
crates/zenb-core/proptest-regressions/: tests_proptest.txt
crates/zenb-core/src/: adaptive.rs  agent_container.rs  belief_subsystem.rs  breath_engine.rs  breath_patterns.rs  causal.rs  causal_subsystem.rs  circuit_breaker.rs  config.rs  control_flow.rs  controller.rs  decision_tree.rs  domain.rs  edge.rs  engine.rs  estimator.rs  flow_enforcement.rs  lib.rs  ltc.rs  perception_subsystem.rs  phase_machine.rs  philosophical_state.rs  policy.rs  replay.rs  resonance.rs  safety_subsystem.rs  safety_swarm.rs  scientist.rs  skandha.rs  tests_config.rs  tests_determinism.rs  tests_estimator.rs  tests_proptest.rs  tests_scientist_integration.rs  thermo_logic.rs  timestamp.rs  timing_subsystem.rs  trauma_cache.rs  uncertain.rs  universal_flow.rs  (+1 more)
crates/zenb-core/tests/: aukf_integration.rs  debug_vajra_energize.rs  efe_integration.rs  gpu_memory_integration.rs  integration_test.rs  level_character_counting.rs  pc_integration.rs  skandha_benchmark.rs  skandha_fair_benchmark.rs
crates/zenb-p2p/: Cargo.toml
crates/zenb-p2p/src/: identity.rs  lib.rs  message.rs  node.rs  peer.rs  transport.rs  trust_boundary.rs
crates/zenb-signals/: Cargo.toml
crates/zenb-signals/src/: dsp.rs  lib.rs  rppg.rs  wavelet.rs
crates/zenb-store/: Cargo.toml
crates/zenb-store/src/: lib.rs  migration.rs
crates/zenb-store/tests/: ironclad_transaction_tests.rs  store_tests.rs  trauma_tests.rs
crates/zenb-uniffi/: ANDROID_INTEGRATION.md  Cargo.toml
crates/zenb-uniffi/src/: async_worker.rs  hardware_bridge.rs  lib.rs  zenb.udl  zenone.rs
crates/zenb-uniffi/tests/: intent_tracing_test.rs
crates/zenb-verticals/: Cargo.toml
crates/zenb-verticals/src/: lib.rs
old code/: # Báo Cáo Nghiên Cứu Toàn Diện- Meta-TRM - Kiến Trúc Suy Luận Đệ Quy Meta-Learning.md  # Meta-Learning Applications in Reasoning and Language Models- Strategic Analysis.md  AUTOMATIC_SCIENTIST_IMPLEMENTATION.md  Architectural Synthesis and the Supreme Core_ A Multi-Generational Analysis of Software Evolution and System Design in 2026.md  B.1 ULTIMATE_ The Vajra-Void Architectonics Specification.md  BENCHMARKING_SUMMARY.md  COGNITIVE_ACTIVATION_SUMMARY.md  Cargo.toml  Kiến trúc AI _Tối Thượng_ cho Thiết Bị Biên (M.A.R.S Eternal v3).docx.md  M.A.R.S 1.md  M.A.R.S 4.md  Nghiên Cứu Kiến Trúc Suy Luận AI.md  PROJECT M.A.R.S v3.0.1.md  Phân Tích Cạnh Tranh & Đóng Góp Mới.md  code react.md  task.md  Đánh Giá SOTA rPPG_ Tối Ưu Hay Cải Thiện_ (1).md  🎯 MASTER EXECUTION PLAN.md
old code/.cargo/: config.toml
old code/integration_tests/: HẠNG_MỤC_2_SUMMARY.md  VALIDATION_SPRINT_COMPLETION.md  VALIDATION_SPRINT_PROGRESS.md  VERIFICATION_CHECKLIST.md
old code/integration_tests/scenarios/: s01_trauma_conditioning.yaml
old code/integration_tests/tests/: active_inference_planning_test.rs  end_to_end_performance.rs  error_scenarios.rs  interdependent_insight_test.rs  lancedb_integration_test.rs  load_test_scenarios.rs  non_attachment_learning_test.rs  phase_1_foundation_tests.rs  phase_2_recurrent_processor_tests.rs  validation_sprint.rs
old code/pandora_core/src/: aca_layer.rs  fep_cell.rs  ontology.rs  string_interner.rs
old code/pandora_core/tests/: skandha_properties_advanced.proptest-regressions
old code/pandora_cwm/tests/: vsa_properties.rs
old code/pandora_error/: Cargo.toml
old code/pandora_error/src/: context.rs  testing.rs
old code/pandora_learning_engine/: Cargo.toml
old code/pandora_learning_engine/src/: active_inference_full.rs  active_inference_simplified.rs  active_inference_skandha.rs  non_attachment_learning_test.rs  skill_forge.rs  skill_forge_lightweight.rs  skill_forge_optimized.rs  skill_forge_simplified.rs  value_estimator.rs
old code/pandora_mcg/: Cargo.toml
old code/pandora_mcg/benches/: enhanced_mcg_bench.rs
old code/pandora_mcg/src/: causal_discovery.rs
old code/pandora_monitoring/: Cargo.toml
old code/pandora_orchestrator/: Cargo.toml
old code/pandora_orchestrator/benches/: circuit_breaker_bench.rs  load_test.rs
old code/pandora_orchestrator/examples/: e2e_integration.rs  edge_optimization_demo.rs
old code/pandora_orchestrator/src/: automatic_scientist_test.rs  circuit_breaker.rs  edge_optimization.rs  simple_api.rs  static_skills.rs  stream_composer.rs
old code/pandora_orchestrator/tests/: circuit_properties.rs
old code/pandora_protocols/: Cargo.toml  build.rs
old code/pandora_protocols/proto/: ontology.proto
old code/pandora_rm/: Cargo.toml
old code/pandora_rm/src/: enhanced_resource_manager.rs
old code/pandora_sie/: Cargo.toml
old code/pandora_sie/src/: lib.rs
old code/pandora_tools/examples/: neural_skills_demo.rs
old code/pandora_tools/tests/: arithmetic_properties.proptest-regressions  logical_reasoning_tests.rs  pattern_matching_tests.rs
old code/pandora_uniffi/: Cargo.toml  build.rs
old code/pandora_uniffi/src/: lib.rs
old code/pandora_uniffi/tests/: basic_tests.rs
old code/reports/: index.html
old code/scripts/: audit_panics.sh  comprehensive_profiling.sh  coverage.sh  load_testing.sh  performance_regression.sh  profile_flamegraph.sh
sdk/integration_tests/: Cargo.toml  HẠNG_MỤC_1.2_SUMMARY.md  TRAUMA_TEST_COMPLETE_REPORT.md
sdk/integration_tests/scenarios/: README.md
sdk/integration_tests/tests/: automatic_scientist_test.rs  birthing_ritual.rs  concurrent_execution.rs  cwm_v3_core_test.rs  learning_engine_integration.rs  (+7 more)
sdk/pandora_core/: Cargo.toml  README.md
sdk/pandora_cwm/: Cargo.toml  README.md
sdk/pandora_tools/: Cargo.toml  NEURAL_SKILLS_UPGRADE.md
zenb-signals-upgraded/: Cargo.toml
zenb-signals-upgraded/src/: lib.rs
(+296 files in other folders)
