[workspace]
resolver = "2"
members = [
    "crates/zenb-core",
    "crates/zenb-store",
    "crates/zenb-projectors",
    "crates/zenb-uniffi",
    "crates/zenb-verticals",
    "crates/zenb-wasm-demo",
    "crates/zenb-cli",
    "crates/zenb-signals",
    "crates/zenb-p2p",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
