[workspace]
members = [
    "pandora_core",
    "pandora_protocols",
    "pandora_tools",
    "pandora_uniffi",
    "pandora_error",
    "integration_tests", "pandora_orchestrator", "pandora_cwm", "pandora_mcg", "pandora_sie", "pandora_learning_engine", "pandora_simulation", "pandora_rm", "pandora_monitoring",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Parsing (consolidated version)
nom = "7.1.3"

# Error handling
thiserror = "1.0.69"
anyhow = "1.0.100"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
fnv = "1.0.7"
regex = "1.11.3"
strsim = "0.11.1"

# Protocol Buffers
prost = "0.12.6"
prost-types = "0.12.6"
prost-build = "0.12.6"

# UniFFI
uniffi = { version = "0.25.3", features = ["build"] }

# Math & Science
num-complex = "0.4.6"
num-traits = "0.2.19"
rustfft = "6.4.1"
bytes = "1.10"
parking_lot = "0.12"
criterion = "0.5"
proptest = "1.5"
futures = "0.3"

# ML stack (Pure Rust)
ndarray = { version = "0.15", features = [] }
ndarray-rand = "0.14"
ndarray-stats = "0.5"
smartcore = { version = "0.3", features = ["serde"] }
linfa = "0.7"
linfa-nn = "0.7"
dfdx = { version = "0.13", features = ["safetensors"] }  # Auto differentiation
argmin = "0.9"
argmin-math = "0.4"
statrs = "0.16"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["hyper-rustls", "http-listener"] }

# Edge Optimization Dependencies
candle-core = { version = "0.9" }  # Minimalist ML framework
# wasmedge-sdk = "0.13"  # WebAssembly runtime - disabled due to version compatibility
libloading = "0.8"

# Optional: ML dependencies (currently disabled due to MSRV conflicts)
# candle-core = { version = "0.3.3", optional = true }
# candle-nn = { version = "0.3.3", optional = true }
