[package]
name = "zenb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
toml = "0.8"
lru = "0.12"
nalgebra = "0.32"  # Linear algebra for UKF
log = "0.4"        # Logging
parking_lot = "0.12"  # High-performance mutex for circuit breaker

# Vajra-001: Holographic Memory dependencies
rustfft = "6.2"       # FFT processing for holographic memory
num-complex = "0.4"   # Complex number arithmetic
rand = "0.8"          # Random vector generation

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"     # Benchmarking for performance tests
