[package]
name = "zenb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
toml = "0.8"
lru = "0.12"
nalgebra = "0.32"  # Linear algebra for UKF
log = "0.4"        # Logging
parking_lot = "0.12"  # High-performance mutex for circuit breaker

# Vajra-001: Holographic Memory dependencies
rustfft = "6.2"       # FFT processing for holographic memory
num-complex = { version = "0.4", features = ["serde"] }   # Complex number arithmetic + serialization
rand = "0.8"          # Random vector generation

# Vajra-Void: Signal processing integration
zenb-signals = { path = "../zenb-signals", optional = true }

# SDK PORT: Monitoring dependencies
lazy_static = "1.4"  # Thread-safe metric singletons

[dependencies.prometheus]
version = "0.13"
optional = true

# GPU acceleration (cubecl) - PLACEHOLDER
# Note: cubecl-metal not yet available on crates.io (as of 2026-01)
# When cubecl releases Metal backend, uncomment and use:
# [dependencies.cubecl]
# version = "0.4"
# optional = true
# [dependencies.cubecl-cuda]
# version = "0.4"
# optional = true

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"     # Benchmarking for performance tests
proptest = "1.4"      # Property-based testing for invariant validation

# EIDOLON FIX 3.1, 3.3: Optional features for experimental/debug subsystems
[features]
default = []
# Skandha pipeline: Buddhist-inspired cognitive architecture (debug/visualization mode)
skandha_pipeline = []
# Thermodynamic logic: GENERIC framework for belief evolution (experimental)
thermodynamic_logic = []
# Allow dharma key mutation (test/research only - unsafe for production)
allow_dharma_mutation = []
# Vajra-Void: Enable advanced signal processing with EnsembleProcessor
vajra_void = ["zenb-signals"]
# SDK PORT: Prometheus metrics for production observability
prometheus = ["dep:prometheus"]
# GPU FFT: CUDA backend for NVIDIA GPUs - PLACEHOLDER (cubecl not yet stable)
gpu_cuda = []
# GPU FFT: Metal backend for Apple GPUs - PLACEHOLDER (cubecl-metal not on crates.io)
gpu_metal = []

[[bench]]
name = "forensic_bench"
harness = false
