[package]
name = "zenb-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking infrastructure for AGOLOS/ZenB"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

# Cryptography
blake3 = "1"
rand = "0.8"

# Channels
async-channel = "2"

# Error handling
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable full libp2p when ready
# full = ["libp2p"]
