[package]
name = "zenb-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking infrastructure for AGOLOS/ZenB"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"  # For [u8; 64] array serialization

# Logging
log = "0.4"

# Cryptography
blake3 = "1"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Channels
async-channel = "2"

# Error handling
thiserror = "1"

# Hex encoding for peer IDs
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Enable full libp2p when ready
# full = ["libp2p"]
# Zero-copy networking via io_uring (Linux 5.6+ only)
io_uring = ["compio"]

[target.'cfg(target_os = "linux")'.dependencies]
# Compio provides io_uring with cross-platform fallback
compio = { version = "0.12", features = ["runtime"], optional = true }
