[package]
name = "zenb-store"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
chacha20poly1305 = "0.9"
aead = "0.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.5"
blake3 = "1.3"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hkdf = "0.12"
sha2 = "0.10"
zenb-core = { path = "../zenb-core" }
