[package]
name = "zenb-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
zenb-core = { path = "../zenb-core", features = ["vajra_void"] }
zenb-store = { path = "../zenb-store" }
zenb-signals = { path = "../zenb-signals" }
zenb-projectors = { path = "../zenb-projectors" }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
uniffi = { version = "0.28", features = ["cli"] }
hex = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3.10"
