[package]
name = "pandora_orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_tools = { path = "../pandora_tools" }
pandora_error = { path = "../pandora_error" }
pandora_learning_engine = { path = "../pandora_learning_engine" }
pandora_mcg = { path = "../pandora_mcg" }
pandora_sie = { path = "../pandora_sie" }
pandora_cwm = { path = "../pandora_cwm", optional = true }
ndarray = { workspace = true, optional = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
async-trait = { workspace = true }
parking_lot = "0.12"
fastrand = "2"
rand = "0.8"
jsonschema = { version = "0.17", optional = true }
once_cell = "1"
lru = "0.12"
fnv = { workspace = true }
config = { version = "0.14", default-features = false, features = ["toml"] }
thiserror = { workspace = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
prometheus = { version = "0.13", optional = true }
bytes = { workspace = true }
lazy_static = "1.4"
pandora_rm = { path = "../pandora_rm" }
pandora_monitoring = { path = "../pandora_monitoring" }
axum = { version = "0.7" }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
# burn = { workspace = true }  # Disabled due to bincode compatibility

[dev-dependencies]
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[features]
default = []
# Enable runtime JSON Schema validation for skill I/O
schema_validation = ["jsonschema"]
prometheus_export = ["prometheus", "metrics", "metrics-exporter-prometheus"]
# Enable ML features (GNN, UQ, predictor)
ml = ["pandora_cwm/ml", "ndarray"]

[[example]]
name = "simple_cli"
path = "examples/simple_cli.rs"

[[example]]
name = "monitoring"
path = "examples/monitoring.rs"
required-features = ["prometheus_export"]

[[example]]
name = "e2e_integration"
path = "examples/e2e_integration.rs"
required-features = ["ml"]

[[bench]]
name = "load_test"
harness = false

[[bench]]
name = "circuit_breaker_bench"
harness = false
