[package]
name = "pandora_protocols"
version = "0.1.0"
edition = "2021"
description = "B.ONE Cognitive OS - Protocol Buffers Definitions"
authors = ["B.ONE Team <team@b1os.dev>"]
license = "Apache-2.0"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
 
[build-dependencies]
prost-build = { workspace = true }
