[package]
name = "pandora_rm"
version = "0.1.0"
edition = "2021"

[dependencies]
pandora_core = { path = "../pandora_core" }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.29"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
