[package]
name = "pandora_core"
version = "0.1.0"
edition = "2021"
description = "B.ONE Cognitive OS - Native Core"
authors = ["B.ONE Team <team@b1os.dev>"]
license = "Apache-2.0"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fnv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
thiserror = { workspace = true }
smallvec = "1.13"
bytes = { version = "1.10", features = ["serde"] }
parking_lot = "0.12"
pandora_error = { path = "../pandora_error" }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
[dev-dependencies]
proptest = { workspace = true }
futures = { workspace = true }
pandora_protocols = { path = "../pandora_protocols" }
pandora_error = { path = "../pandora_error" }
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }


[[bench]]
name = "flow_bench"
harness = false
[[bench]]
name = "hashmap_bench"
harness = false

[[bench]]
name = "comprehensive_bench"
harness = false

[[bench]]
name = "sync_vs_async"
harness = false

[profile.bench]
debug = true

[lib]
name = "pandora_core"
path = "src/lib.rs"
