[package]
name = "pandora_cwm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["ml"]
ml = [
    "ndarray",
    "ndarray-rand",
    "ndarray-stats",
    "smartcore",
    "linfa",
    "linfa-nn",
    "dfdx",
    "argmin",
    "argmin-math",
    "statrs",
]
tda = []
full = ["ml", "tda"]

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_error = { path = "../pandora_error" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
thiserror = { workspace = true }
serde = { workspace = true }
num-complex = { workspace = true }
rustfft = { workspace = true }
fnv = { workspace = true }
ndarray = { workspace = true, optional = true }
ndarray-rand = { workspace = true, optional = true }
ndarray-stats = { workspace = true, optional = true }
smartcore = { workspace = true, optional = true }
linfa = { workspace = true, optional = true }
linfa-nn = { workspace = true, optional = true }
dfdx = { workspace = true, optional = true }
argmin = { workspace = true, optional = true }
argmin-math = { workspace = true, optional = true }
statrs = { workspace = true, optional = true }
# Graph structures and ML dependencies
petgraph = { version = "0.6", features = ["serde-1"] }
rand = "0.8"
smallvec = "1.13"

[dev-dependencies]
proptest = { workspace = true }

# Temporarily disabled due to dependency conflicts
# candle-core = { version = "0.3.3", optional = true }
# candle-nn = { version = "0.3.3", optional = true }
